Fix spacing. Remove a step.

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -29,6 +29,8 @@ html, body
       font-size: 60%
 
   .steps
+    margin-top: 80px
+
     h3
       height: 50px
       width: 50px
